# slack-weekly-trivia

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: admin_server.py  app.py  scheduler.py  stats_store.py  trivia_api.py  trivia_service.py
src/templates/: dashboard.html
tickets/: admin-dashboard.md
